--- a/css/styles/global.sass
+++ b/css/styles/global.sass
@@ -2,9 +2,13 @@
     margin: 0
     padding: 0 
     box-sizing: 0
+    // overflow-x: hidden 
     scroll-behavior: smooth
 
 body
+    overflow-x: hidden !important
+    // overflow-y: hidden
+    // overflow: hidden !important
     padding: 0
     margin: 0
     font-family: 'Poppins', sans-serifs !important
@@ -12,21 +16,16 @@ body
     color: #4B4B4B
 
 .content 
-    overflow: hidden
-    position: relative
-    height: 100vh !important
     width: 100% !important
     margin: 0
     padding: 0
-    z-index: -1
+    display: none
 
-.content-fade 
-    display: block
+.content-fade
     animation-name: fade-in 
     animation-duration: 4s
     animation-fill-mode: forwards
-    overflow-y: scroll
-    overflow-x: hidden
+    overflow: hidden !important
 
     @keyframes fade-in
         0%
@@ -36,7 +35,7 @@ body
 
 .loading
     position: relative
-    height: 100% !important
+    height: 100vh !important
     width: 100% !important
     background: radial-gradient(50% 50% at 50% 50%, #FFFFFF 0%, #F3F8FA 100%)
     z-index: 2
